02-eks-cluster/samples/csi-sample-deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: studying-csi
spec:
  containers:
    - name: app
      image: public.ecr.aws/amazonlinux/amazonlinux
      command: ["/bin/sh", "-c"]
      args:
        - |
          while true; do
            echo "$(date -u)" >> /data/out.txt
            sleep 5
          done
      volumeMounts:
        - name: persistent-storage
          mountPath: /data
  volumes:
    - name: persistent-storage
      persistentVolumeClaim:
        claimName: ebs-claim
